--- a/introduce_history.html
+++ b/introduce_history.html
@@ -187,18 +187,20 @@
                 <li><span>1945 ~ 1959</span></li>
             </ul>
             <ul class="select-tab">
-                <li class="active"><a href="javascript:;">2020 ~ 현재</a></li><!-- 활성화 되어있는 탭일때 active -->
-                <li><a href="javascript:;">2010 ~ 2019</a></li>
-                <li><a href="javascript:;">2000 ~ 2009</a></li>
-                <li><a href="javascript:;">1990 ~ 1999</a></li>
-                <li><a href="javascript:;">1980 ~ 1989</a></li>
-                <li><a href="javascript:;">1970 ~ 1979</a></li>
-                <li><a href="javascript:;">1960 ~ 1969</a></li>
-                <li><a href="javascript:;">1945 ~ 1959</a></li>
+                <li class="active" data-btn-year=".history-wrap>div:eq(0)"><a href="javascript:;">2020 ~ 현재</a></li><!-- 활성화 되어있는 탭일때 active -->
+                <li data-btn-year="div[data-year=2019]"><a href="javascript:;">2010 ~ 2019</a></li>
+                <li data-btn-year="div[data-year=2009]"><a href="javascript:;">2000 ~ 2009</a></li>
+                <li data-btn-year="div[data-year=1999]"><a href="javascript:;">1990 ~ 1999</a></li>
+                <li data-btn-year="div[data-year=1987]"><a href="javascript:;">1980 ~ 1989</a></li>
+                <li data-btn-year="div[data-year=1976]"><a href="javascript:;">1970 ~ 1979</a></li>
+                <li data-btn-year="div[data-year=1967]"><a href="javascript:;">1960 ~ 1969</a></li>
+                <li data-btn-year="div[data-year=1956]"><a href="javascript:;">1945 ~ 1959</a></li>
             </ul>
         </div>
         <div class="history-wrap">
-            <div class="year-wrap active"><!-- 닫힐 때 active 추가 -->
+            <!-- 첫번 째 .spot은 최신년도에만 추가 -->
+            <!-- 나머지는 퀵메뉴에 맞게 추가및 기존유지 -->
+            <div class="year-wrap spot" data-year="2022"><!-- 닫힐 때 active 추가 -->
                 <em class="year">2022</em>
                 <ul>
                     <li>
@@ -210,7 +212,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2021">
                 <em class="year">2021</em>
                 <ul>
                     <li>
@@ -277,7 +279,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2020">
                 <em class="year">2020</em>
                 <ul>
                     <li>
@@ -302,7 +304,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="2019">
                 <em class="year">2019</em>
                 <ul>
                     <li>
@@ -352,7 +354,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2018">
                 <em class="year">2018</em>
                 <ul>
                     <li>
@@ -391,7 +393,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2017">
                 <em class="year">2017</em>
                 <ul>
                     <li>
@@ -427,7 +429,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2016">
                 <em class="year">2016</em>
                 <ul>
                     <li>
@@ -447,7 +449,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2015">
                 <em class="year">2015</em>
                 <ul>
                     <li>
@@ -461,7 +463,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2014">
                 <em class="year">2014</em>
                 <ul>
                     <li>
@@ -488,7 +490,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2013">
                 <em class="year">2013</em>
                 <ul>
                     <li>
@@ -502,7 +504,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2012">
                 <em class="year">2012</em>
                 <ul>
                     <li>
@@ -522,7 +524,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2010">
                 <em class="year">2010</em>
                 <ul>
                     <li>
@@ -533,7 +535,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="2009">
                 <em class="year">2009</em>
                 <ul>
                     <li>
@@ -559,7 +561,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2008">
                 <em class="year">2008</em>
                 <ul>
                     <li>
@@ -594,7 +596,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2007">
                 <em class="year">2007</em>
                 <ul>
                     <li>
@@ -620,7 +622,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2006">
                 <em class="year">2006</em>
                 <ul>
                     <li>
@@ -637,7 +639,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2005">
                 <em class="year">2005</em>
                 <ul>
                     <li>
@@ -651,7 +653,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2004">
                 <em class="year">2004</em>
                 <ul>
                     <li>
@@ -669,7 +671,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2003">
                 <em class="year">2003</em>
                 <ul>
                     <li>
@@ -698,7 +700,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2001">
                 <em class="year">2001</em>
                 <ul>
                     <li>
@@ -724,7 +726,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="2000">
                 <em class="year">2000</em>
                 <ul>
                     <li>
@@ -744,7 +746,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="1999">
                 <em class="year">1999</em>
                 <ul>
                     <li>
@@ -755,7 +757,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1997">
                 <em class="year">1997</em>
                 <ul>
                     <li>
@@ -772,7 +774,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1995">
                 <em class="year">1995</em>
                 <ul>
                     <li>
@@ -789,24 +791,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
-                <em class="year">1995</em>
-                <ul>
-                    <li>
-                        <span class="month">12</span>
-                        <div class="desc">
-                            <p>애경홍콩유한공사 설립</p>
-                        </div>
-                    </li>
-                    <li>
-                        <span class="month">05</span>
-                        <div class="desc">
-                            <p>수원애경역사 법인 설립</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1993">
                 <em class="year">1993</em>
                 <ul>
                     <li>
@@ -820,7 +805,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1992">
                 <em class="year">1992</em>
                 <ul>
                     <li>
@@ -834,7 +819,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1991">
                 <em class="year">1991</em>
                 <ul>
                     <li>
@@ -845,7 +830,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="1987">
                 <em class="year">1987</em>
                 <ul>
                     <li>
@@ -859,7 +844,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1985">
                 <em class="year">1985</em>
                 <ul>
                     <li>
@@ -870,7 +855,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1983">
                 <em class="year">1983</em>
                 <ul>
                     <li>
@@ -881,7 +866,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1982">
                 <em class="year">1982</em>
                 <ul>
                     <li>
@@ -904,7 +889,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1980">
                 <em class="year">1980</em>
                 <ul>
                     <li>
@@ -915,7 +900,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="1976">
                 <em class="year">1976</em>
                 <ul>
                     <li>
@@ -932,7 +917,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1975">
                 <em class="year">1975</em>
                 <ul>
                     <li>
@@ -946,7 +931,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1972">
                 <em class="year">1972</em>
                 <ul>
                     <li>
@@ -960,7 +945,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1970">
                 <em class="year">1970</em>
                 <ul>
                     <li>
@@ -980,7 +965,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="1967">
                 <em class="year">1967</em>
                 <ul>
                     <li>
@@ -994,7 +979,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1966">
                 <em class="year">1966</em>
                 <ul>
                     <li>
@@ -1008,7 +993,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1963">
                 <em class="year">1963</em>
                 <ul>
                     <li>
@@ -1019,7 +1004,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1962">
                 <em class="year">1962</em>
                 <ul>
                     <li>
@@ -1030,7 +1015,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap spot" data-year="1956">
                 <em class="year">1956</em>
                 <ul>
                     <li>
@@ -1050,7 +1035,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1954">
                 <em class="year">1954</em>
                 <ul>
                     <li>
@@ -1064,7 +1049,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="year-wrap">
+            <div class="year-wrap" data-year="1945">
                 <em class="year">1945</em>
                 <ul>
                     <li>
